--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # Copy this file to .env and fill in your actual credentials
+
+# Weaviate Configuration
 WEAVIATE_URL=your_weaviate_cluster_url_here
 WEAVIATE_API_KEY=your_api_key_here
+
+# Cohere Configuration (for embeddings)
+COHERE_API_KEY=your_cohere_api_key_here
+
+# Anthropic Configuration (for Claude LLM)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
